--- a/config.env
+++ b/config.env
@@ -1,5 +1,6 @@
 CONFIG_ENV=config.env
 
+UPLOADNAME=PixelOS
 KERNEL_SOURCE=https://github.com/PixelOS-Devices/kernel_xiaomi_sm6150
 KERNEL_SOURCE_BRANCH=fourteen
 KERNEL_CONFIG=sweet_defconfig
