--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -76,7 +76,7 @@ jobs:
 
     - name: Setup build kernel environment
       run: |
-        echo "BUILD_TIME=$(TZ=Asia/Shanghai date "+%Y%m%d%H%M")" >> $GITHUB_ENV
+        echo "BUILD_TIME=$(TZ=America/Chicago date "+%Y%m%d%H%M")" >> $GITHUB_ENV
         echo "DEVICE=$(echo ${{ env.KERNEL_CONFIG }} | sed 's!vendor/!!;s/_defconfig//;s/_user//;s/-perf//')" >> $GITHUB_ENV
         sudo apt-get update
         sudo apt-get install git ccache automake flex lzop bison gperf build-essential zip curl zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev liblz4-tool make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler python2 python3
@@ -339,16 +339,16 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v2.0.5
       with:
-          tag_name: ${{ env.KERNELSU_TAG }}
+          tag_name: KernelSU-${{ env.KERNELSU_TAG }} Date-${{ env.BUILD_TIME }}
           body: |
             Device:
             ${{ env.DEVICE }}
 
             Kernel:
-            https://github.com/PixelOS-Devices/kernel_xiaomi_sm6150
+            ${{ env.KERNEL_SOURCE }}
 
             AnyKernel3:
-            https://github.com/itsshashanksp/AnyKernel3
+            ${{ env.CUSTOM_ANYKERNEL3_SOURCE }}
 
             KernelSU:
             https://github.com/tiann/KernelSU/releases/tag/${{ env.KERNELSU_TAG }}
