--- a/config.env
+++ b/config.env
@@ -1,12 +1,12 @@
 CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/PixelOS-Devices/kernel_xiaomi_sm6150
-KERNEL_SOURCE_BRANCH=fourteen
+KERNEL_SOURCE_BRANCH=courbet-14
 KERNEL_CONFIG=sweet_defconfig
 KERNEL_IMAGE_NAME=Image.gz
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=true
-EXTRA_CMDS:LLVM=1 LLVM_IAS=1 AR=llvm-ar NM=llvm-nm LD=ld.lld OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip
+EXTRA_CMDS:LLVM=1 LLVM_IAS=1
 
 # Clang
 ## Custom
