config.env: use clang-r510928

--- a/config.env
+++ b/config.env
@@ -10,7 +10,7 @@ EXTRA_CMDS:LLVM=1 LLVM_IAS=1
 
 # Clang
 ## Custom
-USE_CUSTOM_CLANG=true
+USE_CUSTOM_CLANG=false
 CUSTOM_CLANG_SOURCE=https://gitlab.com/PixelOS-Devices/playgroundtc.git
 CUSTOM_CLANG_BRANCH=17
 
@@ -18,8 +18,8 @@ CUSTOM_CLANG_BRANCH=17
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=master-kernel-build-2022
-CLANG_VERSION=r450784e
+CLANG_BRANCH=main-kernel-build-2024
+CLANG_VERSION=r510928
 
 # GCC
 ENABLE_GCC_ARM64=true
