--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -181,7 +181,8 @@ jobs:
         fi
 
         # Save the latest commit ID
-        echo "LATEST_COMMIT_ID=$(git log origin/${{ env.KERNEL_SOURCE_BRANCH }} --branches -1 --pretty=format:"%h")" >> $GITHUB_ENV 
+        LATEST_COMMIT_ID=$(git log origin/${{ env.KERNEL_SOURCE_BRANCH }} --branches -1 --pretty=format:"%h")
+        echo "LATEST_COMMIT_ID=$LATEST_COMMIT_ID" >> $GITHUB_ENV
 
     - name: Download source boot image
       if: env.BUILD_BOOT_IMG == 'true'
