--- a/config.env
+++ b/config.env
@@ -18,7 +18,7 @@ CUSTOM_CLANG_BRANCH=17
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=main-kernel-build-2024
+CLANG_BRANCH=main
 CLANG_VERSION=r530567
 
 # GCC
