--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -294,8 +294,11 @@ jobs:
         rm -rf AnyKernel3/.git* AnyKernel3/README.md
 
     - name: Set UPLOADNAME
-    # Rename UPLOADNAME without the '-' to zip the folder properly
-      run: echo "UPLOADNAME=KernelSU_$KSU_VERSION" >> $GITHUB_ENV
+      run: | 
+        KSU_VERSION=$(cd KernelSU && expr $(/usr/bin/git rev-list --count HEAD) + 10200)
+    
+        # Rename UPLOADNAME without the '-' to zip the folder properly
+        echo "UPLOADNAME=KernelSU_$KSU_VERSION" >> $GITHUB_ENV
 
     
     - name: Make Custom-Anykernel3
